# ragent

./: .gitignore  .~lock.RAGENTPRES.pptx#  AGENTS.md  AGENTS_FIX.md  AGENT_TEAMS.md  AIWIKIPLAN.md  AUTOPILOT_EXPANDED.md  AUTOPILOT_EXPANSION_REPORT.md  BENCHPLAN.md  BKGAGENTS_PLAN.md  BUGSPLAN.md  CCGAP.md  CHANGELOG.md  CODEINDEX.md  CODEINDEX_PLAN.md  CODE_CLEANUP.md  CRATEPLAN.md  Cargo.toml  Cargo2.toml  DOC_INVENTRY.md  FINAL_PROJECT_REPORT.md  IMPL.md  INDEX.md  INDEX_LSP_DOCS.md  INSTALLATION_GUIDE.md  LICENSE  LSP_INTEGRATION_GUIDE.md  LSP_PLAN.md  LSP_QUICK_REFERENCE.md  MAPLAN.md  PERMPLAN.md  PHASE2_EXECUTION_REPORT.md  PHASE2_STATUSBAR_COMPLETION.md  PHASE3_VALIDATION_REPORT.md  PHASE3_VISUAL_POLISH_COMPLETION.md  PHASE4_RESPONSIVE_COMPLETE.md  PHASE5_TESTING_VALIDATION_COMPLETE.md  PHASE6_DOCUMENTATION_RELEASE_COMPLETE.md  QUICKSTART.md  RAGENTMEMOG.md  (+53 more)
crates/aiwiki/: Cargo.toml  test_single_file.rs
crates/aiwiki/examples/: test_single_file_sync.rs
crates/aiwiki/src/: config.rs  error.rs  export_import.rs  extraction.rs  init.rs  lib.rs  pages.rs  source_folder.rs  state.rs
crates/aiwiki/tests/: test_ref_folder_e2e.rs  test_ref_folder_sync.rs  test_source_folders.rs
crates/ragent-agent/: Cargo.toml
crates/ragent-agent/src/: dir_lists.rs  error.rs  id.rs  lib.rs  predictive.rs  resource.rs  sanitize.rs  yolo.rs
crates/ragent-agent/tests/: test_agent_thinking_defaults.rs  test_internal_llm_service.rs  test_profiler.rs  test_skill_invoke.rs  test_stream_config_defaults.rs  test_thinking_pipeline.rs  test_tool_visibility.rs
crates/ragent-aiwiki/: Cargo.toml  test_single_file.rs
crates/ragent-aiwiki/examples/: test_single_file_sync.rs
crates/ragent-aiwiki/src/: export_import.rs  extraction.rs  init.rs  lib.rs  source_folder.rs
crates/ragent-aiwiki/tests/: test_ref_folder_e2e.rs  test_ref_folder_sync.rs  test_source_folders.rs
crates/ragent-bench/: Cargo.toml
crates/ragent-bench/src/: command.rs  data.rs  lib.rs  model.rs  registry.rs  runner.rs  workbook.rs
crates/ragent-bench/tests/: test_bench_core.rs
crates/ragent-code/: COMPLIANCE.md  Cargo.toml  SECURITY_FINDINGS.md  TEST_COVERAGE.md
crates/ragent-code/benches/: bench_indexing.rs
crates/ragent-code/src/: lib.rs  scanner.rs  search.rs  store.rs  types.rs  watcher.rs  worker.rs
crates/ragent-code/tests/: test_codeindex.rs  test_fts_diag.rs  test_m4_integration.rs  test_parse_store_integration.rs  test_scan_store_integration.rs
crates/ragent-config/: Cargo.toml
crates/ragent-config/src/: bash_lists.rs  config.rs  lib.rs  permission.rs
crates/ragent-config/tests/: test_codeindex_permission_matching.rs  test_config_parse_errors.rs  test_internal_llm_config.rs  test_stream_config_defaults.rs  test_thinking_config.rs  test_tool_visibility.rs
crates/ragent-core/: COMPLIANCE.md  Cargo.toml
crates/ragent-core/benches/: bench_file_ops.rs  bench_orchestrator.rs  bench_snapshot.rs  bench_team.rs  bench_tools.rs
crates/ragent-core/examples/: orchestration.rs
crates/ragent-core/src/: bash_lists.rs  error.rs  id.rs  intern.rs  lib.rs  resource.rs  sanitize.rs
crates/ragent-core/tests/: concurrent_file_ops.rs  orchestrator_integration.rs  stress_concurrent_file_ops.rs  test_agent.rs  test_agent_memory.rs  test_agent_profiles.rs  test_agent_system.rs  test_background_agents.rs  test_bash_tool.rs  test_blueprint.rs  test_blueprint_with_manager.rs  test_codeindex_tools.rs  test_command_properties.rs  test_compaction.rs  test_config.rs  test_config_integration.rs  test_context_sandbox.rs  test_custom_agents.rs  test_embeddings.rs  test_event.rs  test_event_secrets.rs  test_event_system.rs  test_execution_tools.rs  test_extraction.rs  test_glob.rs  test_grep.rs  test_hooks.rs  test_huggingface.rs  test_id_types.rs  test_journal.rs  test_list.rs  test_llm_types.rs  test_mailbox_notify.rs  test_mcp_client.rs  test_mcp_discovery.rs  test_memory_blocks.rs  test_message.rs  test_message_types.rs  test_multiedit.rs  test_office_common.rs  (+50 more)
crates/ragent-llm/: Cargo.toml
crates/ragent-llm/src/: lib.rs  llm.rs
crates/ragent-llm/tests/: test_candle_real.rs  test_embedded_runtime.rs  test_thinking_adapters.rs
crates/ragent-prompt_opt/: Cargo.toml  README.md
crates/ragent-prompt_opt/src/: lib.rs
crates/ragent-prompt_opt/tests/: basic.rs
crates/ragent-server/: COMPLIANCE.md  Cargo.toml
crates/ragent-server/benches/: bench_sse.rs
crates/ragent-server/src/: lib.rs  sse.rs
crates/ragent-server/tests/: test_event_to_sse.rs  test_integration.rs  test_memory_api.rs
crates/ragent-storage/: Cargo.toml
crates/ragent-storage/src/: lib.rs  snapshot.rs  storage.rs
crates/ragent-team/: Cargo.toml
crates/ragent-team/src/: lib.rs  tool.rs
crates/ragent-tools-core/: Cargo.toml
crates/ragent-tools-core/src/: append_file.rs  bash.rs  copy_file.rs  create.rs  diff.rs  edit.rs  file_info.rs  file_lock.rs  grep.rs  lib.rs  list.rs  move_file.rs  patch.rs  question.rs  think.rs  truncate.rs  xlsx.rs
crates/ragent-tools-extended/: Cargo.toml
crates/ragent-tools-extended/src/: aiwiki_export.rs  aiwiki_import.rs  codeindex_references.rs  codeindex_reindex.rs  codeindex_search.rs  codeindex_symbols.rs  lib.rs  libreoffice_info.rs  libreoffice_read.rs  libreoffice_write.rs  lsp_definition.rs  lsp_diagnostics.rs  lsp_hover.rs  lsp_references.rs  lsp_symbols.rs  memory_migrate.rs  memory_replace.rs  memory_search.rs  office_common.rs  office_info.rs  office_read.rs  office_write.rs
crates/ragent-tools-vcs/: Cargo.toml
crates/ragent-tools-vcs/src/: lib.rs  registry.rs
crates/ragent-tools-vcs/tests/: test_git_tools.rs
crates/ragent-tui/: COMPLIANCE.md  Cargo.toml  build.rs  performance_findings.md  security_findings.md  test_findings.md
crates/ragent-tui/benches/: bench_cursor.rs  bench_history.rs  bench_markdown.rs
crates/ragent-tui/src/: app.rs  input.rs  layout.rs  layout_active_agents.rs  layout_statusbar.rs  layout_teams.rs  lib.rs  logo.rs  theme.rs  tips.rs  tracing_layer.rs  utils.rs
crates/ragent-tui/tests/: test_agent_switching.rs  (+25 more)
crates/ragent-types/: Cargo.toml
(+2454 files in other folders)
