[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.17"
edition = "2024"
license = "MIT"
repository = "https://github.com/thawkins/ragent"
authors = ["Tim Hawkins <tim.thawkins@gmail.com>"]

[package]
name = "ragent"
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.dependencies]
ragent-core = { path = "crates/ragent-core" }
ragent-server = { path = "crates/ragent-server" }
ragent-tui = { path = "crates/ragent-tui" }

num_cpus = "1.16"
sha2 = "0.10"
blake3 = "1.4"
fs2 = "0.4"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
globset = "0.4"
html2text = "0.16"
similar = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
futures = "0.3"
dirs = "6"
pin-project-lite = "0.2"
bytes = "1"
regex = "1"
base64 = "0.22"
rand = "0.8"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
rmcp = { version = "0.16", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
docx-rust = "0.1"
calamine = "0.34"
rust_xlsxwriter = "0.94"
ooxmlsdk = "0.3"
zip = { version = "7", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.39", features = ["serialize"] }
spreadsheet-ods = "1.0"
printpdf = { version = "0.9", default-features = false, features = ["text_layout", "png", "jpeg"] }
pdf-extract = "0.10"
lopdf = "0.39"
serde_yaml = "0.9"
lsp-types = "0.97"
url = "2"

[[bin]]
name = "ragent"
path = "src/main.rs"

[dependencies]
ragent-core = { workspace = true }
ragent-server = { workspace = true }
ragent-tui = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
