[package]
name = "ragent-config"
version = "0.1.0"
edition = "2024"
authors = ["Tim Hawkins"]
license = "MIT"
description = "Configuration system for ragent"

[dependencies]
ragent-types = { path = "../ragent-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
globset = "0.4"
dirs = "5"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
serial_test = "3.2"
