[package]
name = "ragent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
globset = { workspace = true }
similar = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
pin-project-lite = { workspace = true }
bytes = { workspace = true }
