[package]
name = "ragent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
num_cpus = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
globset = { workspace = true }
html2text = { workspace = true }
similar = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
pin-project-lite = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
rmcp = { workspace = true }
docx-rust = { workspace = true }
calamine = { workspace = true }
rust_xlsxwriter = { workspace = true }
ooxmlsdk = { workspace = true }
zip = { workspace = true }
printpdf = { workspace = true }
pdf-extract = { workspace = true }
lopdf = { workspace = true }
serde_yaml = { workspace = true }
lsp-types = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.5"
