[package]
name = "ragent-prompt_opt"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lib]
path = "src/lib.rs"
