[package]
name = "ragent-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ragent-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
