[package]
name = "ragent-storage"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Tim Hawkins"]
description = "SQLite persistence layer for ragent sessions, memories, journals, snapshots, and teams"
repository = "https://github.com/thawkins/ragent"

[dependencies]
ragent-types = { path = "../ragent-types" }

# Core async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
similar = "2.6"
sha2 = "0.10"
blake3 = "1.6"
base64 = "0.22"
uuid = { version = "1.23", features = ["v4", "serde"] }
rand = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.14"
