[package]
name = "ragent-team"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
ragent-agent = { path = "../ragent-agent" }
ragent-config = { path = "../ragent-config" }
ragent-storage = { path = "../ragent-storage" }
ragent-types = { path = "../ragent-types" }

[dev-dependencies]
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.5"
serial_test = "3.2"
