[package]
name = "ragent-tools-vcs"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Tim Hawkins"]
description = "GitHub and GitLab tools for ragent"
repository = "https://github.com/thawkins/ragent"

[dependencies]
ragent-config = { path = "../ragent-config" }
ragent-types = { path = "../ragent-types" }

tokio = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

reqwest = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
