[package]
name = "ragent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ragent-core = { workspace = true }
ragent-code = { path = "../ragent-code" }
ragent-server = { path = "../ragent-server" }
dirs = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
arboard = { workspace = true }
image = { workspace = true }
html2text = { workspace = true }
pulldown-cmark = "0.12"
prompt_opt = { path = "../prompt_opt" }
async-trait = { workspace = true }
fs2 = { workspace = true }
lru = { workspace = true }

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.5"
criterion = { workspace = true }

[[bench]]
name = "bench_markdown"
harness = false

[[bench]]
name = "bench_cursor"
harness = false

[[bench]]
name = "bench_history"
harness = false

[dependencies.tempfile]
version = "3.5"
